--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,9 +12,9 @@
 
 <div class="jumbotron">
     <div class="container">
-        <h1>Ellie Michels</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+        <h1>Motorycle Bubble Popping Game</h1>
+        <p>Simple game popping bubbles made out of pictures of motorcycles</p>
+        <p><a class="btn btn-primary btn-lg js-start-game" href="#" role="button">Start Game »</a></p>
     </div>
 </div>
 
@@ -25,5 +25,6 @@
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/bower_components/handlebars/handlebars.min.js"></script>
+<script src="/javascripts/global.js"></script>
 </body>
 </html>
