--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -7,3 +7,10 @@
   margin-top: 2em;
   border-top: 3px dashed #DAD8D7;
 }
+
+.bubble-thumb {
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  margin: 5px;
+}
