--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,47 @@
 <div class="row">
-    <canvas id="canvasBubbles" width="750" height="600">Canvas not supported</canvas>
+
+    <div class="col-md-7">
+        <canvas id="canvasBubbles" width="750" height="600">Canvas not supported</canvas>
+    </div>
+
+    <div class="col-md-5">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <!-- Default panel contents -->
+                    <div class="panel-heading">Stats</div>
+                    <div class="panel-body">
+                        <div class="btn-group btn-group-lg" role="group" aria-label="...">
+                            <button type="button" class="btn btn-success js-new-game">New Game</button>
+                            <button type="button" class="btn btn-danger js-end-game">End Game</button>
+                        </div>
+                    </div>
+
+                    <!-- List group -->
+                    <ul class="list-group">
+                        <li class="list-group-item">Popped: <span id="js-popped-bubbles-text">0</span></li>
+                        <li class="list-group-item">Missed: <span id="js-missed-bubbles-text">0</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <a href="#" class="js-choose-bubble-image">
+                    <img class="bubble-thumb" src="https://s3.amazonaws.com/BikeFreeTv-Output/user_videos/2/92/thumbs/hd--00001.png" alt="Image">
+                </a>
+                <a href="#" class="js-choose-bubble-image">
+                    <img class="bubble-thumb" src="https://s3.amazonaws.com/BikeFreeTv-Output/user_videos/2/93/thumbs/hd--00001.png" alt="Image">
+                </a>
+                <a href="#" class="js-choose-bubble-image">
+                    <img class="bubble-thumb" src="https://s3.amazonaws.com/BikeFreeTv-Output/user_videos/2/91/thumbs/hd--00001.png" alt="Image">
+                </a>
+                <a href="#" class="js-choose-bubble-image">
+                    <img class="bubble-thumb" src="https://s3.amazonaws.com/BikeFreeTv-Output/user_videos/2/90/thumbs/hd--00001.png" alt="Image">
+                </a>
+            </div>
+        </div>
+
+    </div>
+
 </div>
