--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,5 +26,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/bower_components/handlebars/handlebars.min.js"></script>
 <script src="/javascripts/global.js"></script>
+<script src="/bower_components/innodb-optimized-uuid/dist/innodb-optimized-uuid.js"></script>
 </body>
 </html>
