--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Stats</div>
+                    <div class="panel-heading">Statistics</div>
                     <div class="panel-body">
                         <div class="btn-group btn-group-lg" role="group" aria-label="...">
                             <button type="button" class="btn btn-success js-new-game">New Game</button>
@@ -20,6 +20,11 @@
                         <li class="list-group-item">Missed: <span id="js-missed-bubbles-text">0</span></li>
                     </ul>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="alert alert-info" role="alert">Choose the image to use as your bubble in the game. This can be changed mid-game.</div>
             </div>
         </div>
         <div class="row">
